<resources>
    <string name="app_name">CollegeMate</string>
    <string name="txtMainPageEvents">Events</string>
    <string name="ImgMainPageSocial">Social Events</string>
    <string name="txtMainPageAvailableHousing">Available Housing</string>
    <string name="ImgAvHousing">Housing</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="txtHintEmail">email</string>
    <string name="ttxHintPassword">password</string>
    <string name="ttxBtnSignIn">Sign In</string>
    <string name="txtBtnSignUp">Sign Up</string>
    <string name="txtHintReEnterPass">confirm password</string>
    <string name="txtBtnCreate">Create</string>
    <string name="txtSignInGoogle">Sign In With Google</string>
    <string name="txtHintLName">Last Name</string>
    <string name="txtHintFName">First Name</string>
    <string name="txtHintMajor">Major</string>
    <string name="txtHintDoB">Date of Birth</string>
    <string name="txtYear">Year</string>
    <string name="txtDay">Day</string>
    <string-array name="txtMonths">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="ButtonNavigationHome">Housing</string>
    <string name="ButtonNavigationChat">Chat</string>
    <string name="ButtonNavigationSearch">Search</string>
    <string name="ButtonNavigationProfile">Profile</string>
    <string name="txtViewTittleQuiz">QUIZ ROOMMATES</string>
    <string name="textButtonQuestion">Submit</string>
    <string name="txtViewTittleMatch">Discover</string>
    <string name="txtviewButtonProfile">Profile</string>
    <string name="txtviewButtonMatch">Match</string>
    <string name="contentDescriptionImageMatch">ImageProfilesMatch</string>
    <string name="txtViewHousingTips">Housing and Tips</string>
    <string name="txtSearchTitle">Search</string>
    <string name="imgViewHousingTips1">Make yourself feel like home</string>
    <string name="txtHousingTip1">Make yourself feel like home by personalizing your space!\n</string>
    <string name="txtHousingTip1_1">Decorate your room with posters, pictures of the people you love and try setting up items that are symbolic for you.</string>
    <string name="txtHousingTip2Title">Get Involved in Residence Activities!</string>
    <string name="txtViewHousingTip2">Participate in residence events and activities to build a sense of community and make new friends during your stay.</string>
    <string name="txtHousingTips3Title">Staying Safe in Student Housing</string>
    <string name="txtHousingTip3">Always lock your door when you leave, report suspicious activity and don\'t lend your key fob to others.</string>
    <string name="txtViewHousingTip4Title">Create a Harmonious Environment</string>
    <string name="txtHousingTip4">Respect diverse backgrounds, traditions and personal choices in shared spaces</string>
    <string name="txtFindAccom">Find Accommodation</string>
    <string name="txtHousingAvail">Housing Availability</string>
    <string name="txtAccommodationDetails">Details</string>
    <string name="btnReserveOrBook">Reserve Accommodation</string>
    <string name="txtCurrentAccomm">Your Current Accommodation Details</string>
    <string name="txtCurrentAccomDetails">Shared bedroom $1.600 due November</string>
    <string name="btnPayRent">Proceed to Payment</string>
    <string name="btnModifyHousing">Modify Housing</string>
    <string name="btnMoreDetails">More Details</string>
    <string name="btnText">btn gallery</string>
    <string name="tedLink"><a href="https://www.ted.com/">Boost your creativity with  TED Talks</a></string>
    <string name="courseEraLink"><a href="https://www.coursera.org/">Revise and review your own paper</a>
    </string>
    <string name="LifeHLink"><a href="https://www.lifehack.org/">Articles written by experts and free courses</a>
    </string>
    <string name="copyleaksLink"><a href="https://copyleaks.com/plagiarism-checker">Your help to avoid plagiarism</a>
    </string>
    <string name="studyfyLink"><a href="https://studyfy.com/">Vast collection of essay samples and articles on Studyfy</a>
    </string>
    <string name="careerLink"><a href="https://www.thebalancemoney.com/career-planning-6265513">Prepare for your perfect career path</a>
    </string>
    <string name="lhealthLineLink"><a href="https://www.healthline.com/">Cope with most common problems that students face</a>
    </string>
    <string name="txtUsefulWeb">Useful Websites</string>
    <string name="txtPayHousingTitle">Housing Payment</string>
    <string name="txtPaymentInfoTitle">Payment Details</string>
    <string name="txtCardholderTitle">Cardholder name</string>
    <string name="txtCreditCardNum">Credit card number</string>
    <string name="txtCVVTitle">CVV</string>
    <string name="txtCardExpiration">Credit card expiration date</string>
    <string name="txtPostalCode">Postal Code</string>
    <string name="btnPayHousing">Submit Payment</string>
    <string name="txtBillingInfoTitle">Billing Information</string>
    <string name="txtFullNameTitle">Full Name</string>
    <string name="txtHintDesc">Tell about yourself</string>
    <string name="txtSplit">,</string>
    <string name="txtHousingTips2">Housing Tips</string>
    <string name="btnBackButton"> Back </string>
    <string name="txtFloorPlanInd">FloorPlanInd</string>
    <string name="txtCardPaymentDetails">Credit Card Payment Details</string>
    <string name="txtBtnProcessPayment">Process Payment</string>
    <string name="txtBtnCancelPayment">Cancel</string>

</resources>
