<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page"
        android:title="@string/ButtonNavigationHome"
        android:enabled="true"
        android:icon="@drawable/ic_home_foreground"/>
    <item
        android:id="@+id/chat_page"
        android:enabled="true"
        android:title="@string/ButtonNavigationChat"
        android:icon="@drawable/ic_chat_foreground"/>
    <item
        android:id="@+id/search_page"
        android:enabled="true"
        android:title="@string/ButtonNavigationSearch"
        android:icon="@drawable/ic_search_foreground"/>
    <item
        android:id="@+id/profile_page"
        android:enabled="true"
        android:title="@string/ButtonNavigationProfile"
        android:icon="@drawable/ic_profile_foreground"/>
</menu>