<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">



  <EditText
      android:id="@+id/inputEmail"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:ems="10"
      android:hint="@string/txtHintEmail"
      android:inputType="text"

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.42000002" />

  <EditText
      android:id="@+id/inputPassword"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:layout_marginTop="16dp"
      android:ems="10"
      android:hint="@string/ttxHintPassword"
      android:inputType="text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

  <Button
      android:id="@+id/btnSignIn"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:background="@drawable/custom_btn"
      android:text="@string/ttxBtnSignIn"
      android:textColor="#222021"

      app:backgroundTint="@null"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

  <com.developer.gbuttons.GoogleSignInButton
      android:id="@+id/btnSignInGoogle"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:background="@drawable/custom_btn"
      android:text="@string/txtSignInGoogle"
      android:textAllCaps="false"
      android:textColor="#222021"
      app:backgroundTint="@null"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.501"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

  <Button
      android:id="@+id/btnSignUp"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:backgroundTint="@null"
      android:background="@drawable/custom_btn"
      android:text="@string/txtBtnSignUp"
      android:textColor="#222021"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />
</androidx.constraintlayout.widget.ConstraintLayout>